Fix environment variable reference for IMAGE_TAG in CI workflow

--- a/.github/workflows/ui-testing.yml
+++ b/.github/workflows/ui-testing.yml
@@ -83,7 +83,7 @@ jobs:
           docker compose up -d
           docker compose ps
       env:
-        IMAGE_TAG: $IMAGE_TAG
+        IMAGE_TAG: ${{ secrets.IMAGE_TAG }}
         OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
         SONARQUBE_USERNAME: ${{ secrets.SONARQUBE_USERNAME }}
         SONARQUBE_PASSWORD: ${{ secrets.SONARQUBE_PASSWORD }}
