--- a/.github/workflows/ui-testing.yml
+++ b/.github/workflows/ui-testing.yml
@@ -116,7 +116,7 @@ jobs:
     - name: Wait for SonarQube UI to be ready
       run: |
         for i in {1..30}; do
-          if curl -sS http://$EC2_HOST:9000 | grep -q '<title>SonarQube'; then
+          if curl -sS http://$EC2_PUBLIC_IP:9000 | grep -q '<title>SonarQube'; then
             echo "SonarQube UI is up!"
             break
           fi
@@ -124,7 +124,7 @@ jobs:
           sleep 5
         done
         # Final check
-        if ! curl -sS http://$EC2_HOST:9000 | grep -q '<title>SonarQube'; then
+        if ! curl -sS http://$EC2_PUBLIC_IP:9000 | grep -q '<title>SonarQube'; then
           echo "SonarQube UI did not become ready in time."
           exit 1
         fi
